gobmkida/c1/store_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_owl_cache/src/engine/persistent.c:1253:25: error: use of undeclared identifier 'byte_9AA88C'
v22 = ( unsigned __int8)byte_9AA88C[k]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_owl_cache/src/engine/persistent.c:1260:4: error: use of undeclared identifier 'byte_9AA88D'
|| byte_9AA88D[k] != 3 && j == v39[k + 21]) ) 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_owl_cache/src/obj/1/persistent.o] Error 1
